# grid_nav

./: .gitignore  README.md  pyproject.toml
grid_nav/: agent.py  main.py
grid_nav/agents/: a_star.py  bc_agent.py  human.py
grid_nav/behaviour_cloning/: dataset.py  model.py  plot.py  train.py
worlds/test/: grid1.txt  grid2.txt  grid3.txt  grid4.txt
worlds/train/: grid1.txt  grid2.txt  grid3.txt  grid4.txt  grid5.txt  grid6.txt
