[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "grid_nav"
version = "0.0.0"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pygame",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "toml",
    "tqdm",
    "streamlit"
]

[project.scripts]
grid-nav = "grid_nav.main:main"
behaviour_cloning_train = "grid_nav.behaviour_cloning.train:main"

[tool.setuptools]
packages = ["grid_nav"]
